Fix issue where horizontally expanding centered, overflown content, would justify it to the left

--- a/src/components/Center/Center.module.css
+++ b/src/components/Center/Center.module.css
@@ -9,9 +9,14 @@
   overflow: hidden;
 }
 
-.center .inner-wrap {
+.center:not(.overflown) .inner-wrap {
   width: 100%;
   text-align: center;
+}
+
+.center.overflown .inner-wrap {
+  width: 100%;
+  display: inline-block;
 }
 
 /** Text-align-based center */
